--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <!-- Put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>EJ, Eunseok Choi | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Improve your SEO by adding a small descrption of you -->
@@ -46,12 +46,12 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">John Doe</span>
+          Hi, my name is <span class="text-color-main">EJ Eunseok Choi</span>
           <br />
-          I'm the Unknown Developer.
+          I'm the Developer you need.
         </h1>
         <p class="hero-cta" class="load-hidden">
-          <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
+          <a class="cta-btn cta-btn--hero" href="#about">Hire me</a>
         </p>
       </div>
     </div>
@@ -113,7 +113,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">Robofriends</h3>
                 <div>
                   <p class="mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -223,13 +223,13 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            [Put your call to action here]
+            Email: eun530k@gmail.com
           </p>
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:eun530k@email.com"
+            >Send an Email</a
           >
         </div>
       </div>
@@ -244,15 +244,12 @@
         </a>
         <div class="social-links">
           <a href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://www.linkedin.com/in/eunseok-cayden-choi-2aa79a137/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/EJ-C" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -267,31 +264,8 @@
             class="fa fa-heart px-2"
           ></i>
           by
-          <a href="https://github.com/covidev" target="_blank">Jacobo Martínez</a>
+          <a href="https://github.com/EJ-C" target="_blank">EJ Eunseok Choi</a>
           </a>
-        </p>
-
-        <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
       </div>
     </footer>
     <!-- /END Footer Section -->
