--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <!-- Put here your site title -->
-    <title>EJ, Eunseok Choi | Developer</title>
+    <title>EJ, Cayden Eunseok Choi | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Improve your SEO by adding a small descrption of you -->
@@ -46,7 +46,7 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">EJ, Eunseok Choi</span>
+          Hi, my name is <span class="text-color-main">EJ, Cayden Eunseok Choi</span>
           <br />
           I'm the Developer you need.
         </h1>
@@ -113,13 +113,13 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Robofriends</h3>
+                <h3 class="project-wrapper__text-title">Robotfriends APP</h3>
                 <div>
                   <p class="mb-4">
                     My robot friends are waiting for you!
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://confident-curie-58d7de.netlify.com/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://ej-c.github.io/robofriends/">
                   See Live
                 </a>
                 <a target="_blank" class="cta-btn text-color-main" href="https://github.com/EJ-C/robofriends">
@@ -129,9 +129,9 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://ej-c.github.io/robofriends/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/banner.png" />
+                    <img class="img-fluid" src="./assets/robotfriends.png" />
                   </div>
                 </a>
               </div>
@@ -143,14 +143,40 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">Face Recognition Machine Learning APP</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Face recognition app
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://cayden-face-recog.herokuapp.com/">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/EJ-C/face-recognition-brain">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://cayden-face-recog.herokuapp.com/" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/brain.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Wrok in Process</h3>
+                <div>
+                  <p class="mb-4">
+                    Work in Process
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
@@ -165,41 +191,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/banner.png" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
-                <div>
-                  <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/banner.png" />
+                    <img class="img-fluid" src="./assets/robotfriends.png" />
                   </div>
                 </a>
               </div>
@@ -260,7 +252,7 @@
             class="fa fa-heart px-2"
           ></i>
           by
-          <a href="https://github.com/EJ-C" target="_blank">EJ Eunseok Choi</a>
+          <a href="https://github.com/EJ-C" target="_blank">EJ, Cayden Eunseok Choi</a>
           </a>
       </div>
     </footer>
