--- a/src/template.html
+++ b/src/template.html
@@ -18,11 +18,11 @@
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <!-- Put here your site title -->
-    <title>EJ, Cayden Eunseok Choi | Developer</title>
+    <title>Cayden, Eunseok Choi | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Cayden, Eunseok Choi | Developer" />
 
     <!-- Required librarys -->
     <link
@@ -78,13 +78,13 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Work in process
+                High-energy developer who has various IT project experiences currently finalizing college diploma and degree in Software and Big data Engineering.
               </p>
               <p class="about-wrapper__info-text">
                 <!-- Work in process -->
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/open?id=1SZQ52JUMN6yVgwEtcsJneIrTcECIH7oA">
                   View Resume
                 </a>
               </span>
@@ -107,10 +107,10 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Robotfriends APP</h3>
+                <h3 class="project-wrapper__text-title">Robofriends APP</h3>
                 <div>
                   <p class="mb-4">
-                    My robot friends are waiting for you!
+                    My robofriends app is created using React.js and Also working as a Progressive Web App. This app has test environment Jest and Enzyme which is for React Web App.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://ej-c.github.io/robofriends/">
@@ -140,7 +140,8 @@
                 <h3 class="project-wrapper__text-title">Face Recognition Machine Learning APP</h3>
                 <div>
                   <p class="mb-4">
-                    Face recognition app
+                    my Face Recognition App has a feature that Machine learning to recognize face by using API.
+                    This app is working as Full stack.  
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://cayden-face-recog.herokuapp.com/">
@@ -240,13 +241,13 @@
 
         <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2019 - Developed with
+          © 2020 - Developed with
           <i
             style="color: #dc3545; font-size: 1.8rem"
             class="fa fa-heart px-2"
           ></i>
           by
-          <a href="https://github.com/EJ-C" target="_blank">EJ, Cayden Eunseok Choi</a>
+          <a href="https://github.com/EJ-C" target="_blank">Cayden, Eunseok Choi</a>
           </a>
       </div>
     </footer>
