--- a/src/template.html
+++ b/src/template.html
@@ -46,7 +46,7 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">EJ, Cayden Eunseok Choi</span>
+          Hi, my name is <span class="text-color-main">Cayden, Eunseok Choi</span>
           <br />
           I'm the Developer you need.
         </h1>
@@ -84,7 +84,7 @@
                 <!-- Work in process -->
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/open?id=1SZQ52JUMN6yVgwEtcsJneIrTcECIH7oA">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/open?id=1yRNmw5vb8FWNi1Hz2PRlCI3j3-hO_J_7">
                   View Resume
                 </a>
               </span>
@@ -168,7 +168,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Wrok in Process</h3>
+                <h3 class="project-wrapper__text-title">Wrok in Process (Upgrade robofriends app)</h3>
                 <div>
                   <p class="mb-4">
                     Work in Process
