update new project

--- a/src/template.html
+++ b/src/template.html
@@ -168,16 +168,16 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Wrok in Process (Upgrade robofriends app)</h3>
+                <h3 class="project-wrapper__text-title">World Blist</h3>
                 <div>
                   <p class="mb-4">
-                    Work in Process
+                    This is the webpage that is including information of clothing brands
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://ej-c.github.io/worldblist/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/EJ-C/worldblist">
                   Source Code
                 </a>
               </div>
@@ -186,13 +186,44 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/robotfriends.png" />
+                    <img class="img-fluid" src="./assets/brand.png" />
                   </div>
                 </a>
               </div>
             </div>
           </div>
           <!-- /END Project -->
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Work in progress</h3>
+                <div>
+                  <p class="mb-4">
+                    Work in progress
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://ej-c.github.io/robofriends/" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
         </div>
       </div>
     </section>
