--- a/src/template.html
+++ b/src/template.html
@@ -184,7 +184,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://ej-c.github.io/worldblist/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/brand.png" />
                   </div>
@@ -214,7 +214,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://ej-c.github.io/robofriends/" target="_blank">
+                <a href="" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="" />
                   </div>
