--- a/src/template.html
+++ b/src/template.html
@@ -168,7 +168,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">World Blist</h3>
+                <h3 class="project-wrapper__text-title">World Blist(Work in Progress)</h3>
                 <div>
                   <p class="mb-4">
                     This is the webpage that is including information of clothing brands
