--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,7 @@
     <!-- Put here your site title -->
     <title>Cayden, Eunseok Choi | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="[username, [name], skill" />
     <!-- Improve your SEO by adding a small descrption of you -->
     <meta name="description" content="Cayden, Eunseok Choi | Developer" />
 
@@ -78,16 +78,11 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                High-energy developer who has various IT project experiences currently finalizing college diploma and degree in Software and Big data Engineering.
+                I am a dedicated developer with proven skills and abilities in this field. An essential part of my development is a work ethic that consistently engages the inputs of others, staying abreast of changes in technology and collaboration of ideas. My goal is to be a positive addition to any team and an integral asset to the organization.
               </p>
               <p class="about-wrapper__info-text">
                 <!-- Work in process -->
               </p>
-              <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/open?id=1yRNmw5vb8FWNi1Hz2PRlCI3j3-hO_J_7">
-                  View Resume
-                </a>
-              </span>
             </div>
           </div>
         </div>
@@ -110,7 +105,7 @@
                 <h3 class="project-wrapper__text-title">Robofriends APP</h3>
                 <div>
                   <p class="mb-4">
-                    My robofriends app is created using React.js and Also working as a Progressive Web App. This app has test environment Jest and Enzyme which is for React Web App.
+                    My robofriends app is created using React.js and Also working as a PWA.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://ej-c.github.io/robofriends/">
@@ -141,7 +136,7 @@
                 <div>
                   <p class="mb-4">
                     my Face Recognition App has a feature that Machine learning to recognize face by using API.
-                    This app is working as Full stack.  
+                    This app works as full stack web app.  
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://cayden-face-recog.herokuapp.com/">
@@ -157,6 +152,36 @@
                 <a href="https://cayden-face-recog.herokuapp.com/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/brain.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+           <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">E-Commerce web project (Work in progress)</h3>
+                <div>
+                  <p class="mb-4">
+                    Work in progress
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="" />
                   </div>
                 </a>
               </div>
@@ -187,6 +212,36 @@
                 <a href="https://ej-c.github.io/worldblist/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/brand.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Work in progress</h3>
+                <div>
+                  <p class="mb-4">
+                    Work in progress
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="" />
                   </div>
                 </a>
               </div>
