--- a/src/template.html
+++ b/src/template.html
@@ -193,7 +193,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">World Blist(Work in Progress)</h3>
+                <h3 class="project-wrapper__text-title">World Blist(Work in Progress with team)</h3>
                 <div>
                   <p class="mb-4">
                     This is the webpage that is including information of clothing brands
@@ -212,6 +212,96 @@
                 <a href="https://ej-c.github.io/worldblist/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/brand.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">MyPAM </h3>
+                <div>
+                  <p class="mb-4">
+                    This is an android mobile app development project with 7 team members in college
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/MyPAM/MyPAM">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Work in progress</h3>
+                <div>
+                  <p class="mb-4">
+                    Work in progress
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+          
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Work in progress</h3>
+                <div>
+                  <p class="mb-4">
+                    Work in progress
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="" />
                   </div>
                 </a>
               </div>
@@ -312,7 +402,7 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="#!" target="_blank">
+          <a href="https://codepen.io/ej-c" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
           </a>
           <a href="https://www.linkedin.com/in/eunseok-cayden-choi-2aa79a137/" target="_blank">
