--- a/src/template.html
+++ b/src/template.html
@@ -102,6 +102,37 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">MyPAM </h3>
+                <div>
+                  <p class="mb-4">
+                    This is an Android financial management app. 7 members in a group, We developed this app during one semester.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/MyPAM/MyPAM">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">Robofriends APP</h3>
                 <div>
                   <p class="mb-4">
@@ -159,36 +190,6 @@
           </div>
           <!-- /END Project -->
 
-           <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">E-Commerce web project (Work in progress)</h3>
-                <div>
-                  <p class="mb-4">
-                    Work in progress
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
           <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
@@ -219,20 +220,20 @@
           </div>
           <!-- /END Project -->
 
-          <!-- Each .row is a project -->
+           <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">MyPAM </h3>
+                <h3 class="project-wrapper__text-title">E-Commerce web project (Work in progress)</h3>
                 <div>
                   <p class="mb-4">
-                    This is an android mobile app development project with 7 team members in college
+                    Work in progress
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/MyPAM/MyPAM">
+                <a target="_blank" class="cta-btn text-color-main" href="">
                   Source Code
                 </a>
               </div>
@@ -248,6 +249,9 @@
             </div>
           </div>
           <!-- /END Project -->
+
+          
+
 
           <!-- Each .row is a project -->
           <div class="row">
