--- a/src/template.html
+++ b/src/template.html
@@ -48,7 +48,7 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Cayden, Eunseok Choi</span>
           <br />
-          I'm the Developer you need.
+          I am the Developer you need.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Hire me</a>
@@ -78,7 +78,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                I am a dedicated developer with proven skills and abilities in this field. An essential part of my development is a work ethic that consistently engages the inputs of others, staying abreast of changes in technology and collaboration of ideas. My goal is to be a positive addition to any team and an integral asset to the organization.
+                I'm a dedicated developer with proven skills and abilities in this field. An essential part of my development is a work ethic that consistently engages the inputs of others, staying abreast of changes in technology and collaboration of ideas. My goal is to be a positive addition to any team and an integral asset to the organization.
               </p>
               <p class="about-wrapper__info-text">
                 <!-- Work in process -->
@@ -136,7 +136,7 @@
                 <h3 class="project-wrapper__text-title">Robofriends APP</h3>
                 <div>
                   <p class="mb-4">
-                    My robofriends app is created using React.js and Also working as a PWA.
+                   Robofriends app is created using React.js and Also working as a PWA.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://ej-c.github.io/robofriends/">
@@ -166,7 +166,7 @@
                 <h3 class="project-wrapper__text-title">Face Recognition Machine Learning APP</h3>
                 <div>
                   <p class="mb-4">
-                    my Face Recognition App has a feature that Machine learning to recognize face by using API.
+                    Face Recognition App has a feature that Machine learning to recognize face using API.
                     This app works as full stack web app.  
                   </p>
                 </div>
@@ -194,10 +194,10 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">World Blist(Work in Progress with team)</h3>
+                <h3 class="project-wrapper__text-title">World Blist(Work in Progress)</h3>
                 <div>
                   <p class="mb-4">
-                    This is the webpage that is including information of clothing brands
+                    This app gives you information of clothing brands and news.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://ej-c.github.io/worldblist/">
