--- a/src/template.html
+++ b/src/template.html
@@ -182,7 +182,7 @@
               <div class="project-wrapper__image">
                 <a href="https://cayden-face-recog.herokuapp.com/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/brain.png" />
+                    <img class="img-fluid" src="./assets/brain.jpg" />
                   </div>
                 </a>
               </div>
@@ -190,7 +190,7 @@
           </div>
           <!-- /END Project -->
 
-          <!-- Each .row is a project -->
+          <!-- Each .row is a project -->m
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
@@ -212,7 +212,7 @@
               <div class="project-wrapper__image">
                 <a href="https://ej-c.github.io/worldblist/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/brand.png" />
+                    <img class="img-fluid" src="./assets/brand.jpg" />
                   </div>
                 </a>
               </div>
