added and updated Ecommerce link and image

--- a/src/template.html
+++ b/src/template.html
@@ -102,16 +102,16 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">MyPAM </h3>
+                <h3 class="project-wrapper__text-title">E-Commerce Web app (Work in progress)</h3>
                 <div>
                   <p class="mb-4">
-                    This is an Android financial management app. 7 members in a group, We developed this app during one semester.
+                    Work in progress
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://elastic-mcnulty-686d0d.netlify.app">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/MyPAM/MyPAM">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/EJ-C/ecommerce-example01">
                   Source Code
                 </a>
               </div>
@@ -120,14 +120,13 @@
               <div class="project-wrapper__image">
                 <a href="" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/MyPAM.jpg" />
+                    <img class="img-fluid" src="./assets/ecommerce.jpg" />
                   </div>
                 </a>
               </div>
             </div>
           </div>
           <!-- /END Project -->
-
 
           <!-- Each .row is a project -->
           <div class="row">
@@ -190,6 +189,33 @@
           </div>
           <!-- /END Project -->
 
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">MyPAM </h3>
+                <div>
+                  <p class="mb-4">
+                    This is an Android financial management app. 7 members in a group, We developed this app during one semester.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/MyPAM/MyPAM">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/MyPAM.jpg" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
           <!-- Each .row is a project -->m
           <div class="row">
             <div class="col-lg-4 col-sm-12">
@@ -219,39 +245,6 @@
             </div>
           </div>
           <!-- /END Project -->
-
-           <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">E-Commerce web project (Work in progress)</h3>
-                <div>
-                  <p class="mb-4">
-                    Work in progress
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          
-
 
           <!-- Each .row is a project -->
           <div class="row">
