--- a/src/template.html
+++ b/src/template.html
@@ -132,6 +132,35 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">CAREA - KOREAN CANADA COMMUNITY FORUM (Work in progress)</h3>
+                <div>
+                  <p class="mb-4">
+                    CAREA app is built by using Wordpress.
+                    
+                    Work in progress.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://eun530k.cafe24.com/">
+                  See Live
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/ecommerce.jpg" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">Robofriends APP</h3>
                 <div>
                   <p class="mb-4">
