fixed project title

--- a/src/template.html
+++ b/src/template.html
@@ -102,7 +102,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">E-Commerce Web app (Work in progress)</h3>
+                <h3 class="project-wrapper__text-title">E-COMMERCE WEB APP (Work in progress)</h3>
                 <div>
                   <p class="mb-4">
                     Work in progress
@@ -149,7 +149,7 @@
               <div class="project-wrapper__image">
                 <a href="" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/ecommerce.jpg" />
+                    <img class="img-fluid" src="./assets/carea.png" />
                   </div>
                 </a>
               </div>
@@ -161,7 +161,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Robofriends APP</h3>
+                <h3 class="project-wrapper__text-title">ROBOFRIENDS APP</h3>
                 <div>
                   <p class="mb-4">
                    Robofriends app is created using React.js and Also working as a PWA.
@@ -191,7 +191,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Face Recognition Machine Learning APP</h3>
+                <h3 class="project-wrapper__text-title">FACE RECOGNITION MACHINE LEARNING APP</h3>
                 <div>
                   <p class="mb-4">
                     Face Recognition App has a feature that Machine learning to recognize face using API.
@@ -249,7 +249,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">World Blist(Work in Progress)</h3>
+                <h3 class="project-wrapper__text-title">WORLD BLIST (Work in Progress)</h3>
                 <div>
                   <p class="mb-4">
                     This app gives you information of clothing brands and news.
