modified projects and "About me"

--- a/src/template.html
+++ b/src/template.html
@@ -78,7 +78,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                I'm a dedicated developer with proven skills and abilities in this field. An essential part of my development is a work ethic that consistently engages the inputs of others, staying abreast of changes in technology and collaboration of ideas. My goal is to be a positive addition to any team and an integral asset to the organization.
+                A recent grad from Centennial College with a diploma in Software Engineering and Cyber University of Korea with degrees in Information Science and Software Engineering. Experienced in Big Data analysis, React Native Web app and Android app developements. Pursuing a career in the Software developer and Data scientist. Passionate about exploring new ways to improve results and accuracy.
               </p>
               <p class="about-wrapper__info-text">
                 <!-- Work in process -->
@@ -135,7 +135,7 @@
                 <h3 class="project-wrapper__text-title">CAREA - KOREAN CANADA COMMUNITY FORUM (Work in progress)</h3>
                 <div>
                   <p class="mb-4">
-                    CAREA app is built by using Wordpress.
+                    CAREA Web app is built by using Wordpress(PHP).
                     
                     Work in progress.
                   </p>
@@ -164,7 +164,7 @@
                 <h3 class="project-wrapper__text-title">ROBOFRIENDS APP</h3>
                 <div>
                   <p class="mb-4">
-                   Robofriends app is created using React.js and Also working as a PWA.
+                   Robofriends app is using React.js.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://ej-c.github.io/robofriends/">
@@ -194,8 +194,7 @@
                 <h3 class="project-wrapper__text-title">FACE RECOGNITION MACHINE LEARNING APP</h3>
                 <div>
                   <p class="mb-4">
-                    Face Recognition App has a feature that Machine learning to recognize face using API.
-                    This app works as full stack web app.  
+                    Face Recognition App is using React.js. 
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://cayden-face-recog.herokuapp.com/">
@@ -245,29 +244,29 @@
           </div>
           <!-- /END Project -->
 
-          <!-- Each .row is a project -->m
+          <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">WORLD BLIST (Work in Progress)</h3>
+                <h3 class="project-wrapper__text-title">Work in progress</h3>
                 <div>
                   <p class="mb-4">
-                    This app gives you information of clothing brands and news.
+                    Work in progress
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://ej-c.github.io/worldblist/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/EJ-C/worldblist">
+                <a target="_blank" class="cta-btn text-color-main" href="">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://ej-c.github.io/worldblist/" target="_blank">
+                <a href="" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/brand.jpg" />
+                    <img class="img-fluid" src="" />
                   </div>
                 </a>
               </div>
