added movie app project

--- a/src/template.html
+++ b/src/template.html
@@ -90,6 +90,36 @@
     </section>
     <!-- /END About Section -->
 
+    <!-- Each .row is a project -->
+    <div class="row">
+      <div class="col-lg-4 col-sm-12">
+        <div class="project-wrapper__text">
+          <h3 class="project-wrapper__text-title">Movie app</h3>
+          <div>
+            <p class="mb-4">
+              Movie app
+            </p>
+          </div>
+          <a target="_blank" class="cta-btn cta-btn--hero" href="https://ej-c.github.io/movie_rates_app_2020/#/">
+            See Live
+          </a>
+          <a target="_blank" class="cta-btn text-color-main" href="https://github.com/EJ-C/movie_rates_app_2020">
+            Source Code
+          </a>
+        </div>
+      </div>
+      <div class="col-lg-8 col-sm-12">
+        <div class="project-wrapper__image">
+          <a href="" target="_blank">
+            <div data-tilt class="thumbnail rounded">
+              <img class="img-fluid" src="" />
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- /END Project -->
+
     <!-- **** Projects Section **** -->
     <section id="projects">
       <div class="container">
@@ -237,36 +267,6 @@
                 <a href="" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/MyPAM.jpg" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Work in progress</h3>
-                <div>
-                  <p class="mb-4">
-                    Work in progress
-                  </p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="" />
                   </div>
                 </a>
               </div>
