add 'photo exhibition' project

--- a/src/template.html
+++ b/src/template.html
@@ -92,7 +92,7 @@
 
     
     
-
+  
     <!-- **** Projects Section **** -->
     <section id="projects">
       <div class="container">
@@ -100,6 +100,36 @@
           <h2 class="section-title dark-blue-text">
             Projects
           </h2>
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Photo Exhibition</h3>
+                <div>
+                  <p class="mb-4">
+                    Photo display with infinite scroll
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://elegant-lewin-d440b2.netlify.app/">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/EJ-C/https://github.com/EJ-C/photo-exhibition">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
 
           <!-- Each .row is a project -->
           <div class="row">
