--- a/src/template.html
+++ b/src/template.html
@@ -123,7 +123,7 @@
               <div class="project-wrapper__image">
                 <a href="" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="" />
+                    <img class="img-fluid" src="./assets/exhibition.jpg" />
                   </div>
                 </a>
               </div>
